xmppbots - Use JDK7 GC1 garbage collector, experiment with DFA regex.