@@ -1,12 +1,12 @@
 fork in run := true
 
-javaOptions in run ++= Seq("-server", 
+javaOptions in run ++= Seq("-server",
                            "-Xmx2G",
                            "-Xss1M",
                            "-XX:+CMSClassUnloadingEnabled",
-                           "-XX:MaxPermSize=384M",
-                           "-XX:CompileThreshold=8000", 
-                           "-XX:+UseConcMarkSweepGC",
+                           "-XX:+UnlockExperimentalVMOptions",
+                           "-XX:+UseG1GC",
+                           "-XX:MaxGCPauseMillis=10",
                            "-verbose:gc",
                            "-XX:+PrintGCDetails",
                            "-XX:+PrintGCTimeStamps") 
